docs: add modal documentation and clean up previous ones

--- a/documentation/docs/components/alert.mdx
+++ b/documentation/docs/components/alert.mdx
@@ -44,7 +44,7 @@ import { Alert } from '@dorai-ui/alert'
 const AlertComp = () => <Alert />
 ```
 
-#### Alert
+#### `Alert`
 
 The main Alert component.
 
