--- a/documentation/docs/components/alert-dialog.mdx
+++ b/documentation/docs/components/alert-dialog.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 2
+sidebar_position: 3
 ---
 
 # Alert Dialog
@@ -160,7 +160,7 @@ const AlertDialogComp = () => (
 )
 ```
 
-#### `AlertDialog (required)`
+#### `AlertDialog`
 
 AlertDialog is the parent component for all other components, it exposes the context and is required.
 
